@@ -1,27 +1,8 @@
 include $(top_srcdir)/docs/Makefile_web.am_fragment
 
-figuresdir = $(gtkmm_docdir)/tutorial/figures
+iconsdir = $(gtkmm_docdir)/tutorial/icons
 
-figures_DATA = alignment.png aspectframe.png \
-	box_packing1.png box_packing2.png box_packing3.png \
-	buttonbox.png buttons.png checkbutton.png \
-	clipboard_simple.png clipboard_ideal.png \
-	combo.png combobox_complex.png combobox_text.png custom_container.png \
-	dialogs_about.png dialogs_colorselectiondialog.png dialogs_filechooser.png dialogs_fontselectiondialog.png \
-	dialogs_messagedialog.png dialogs_simple.png \
-	drag_and_drop.png drawingarea_arcs.png drawingarea_curve.png drawingarea_lines.png drawingarea_text.png \
-	entry.png eventbox.png expander.png filechooserbutton.png frame.png \
-	helloworld.png helloworld2.png idle.png label.png \
-	main_menu.png menu_popup.png \
-	menus_menubar.png menus_menu.png menus_and_toolbars.png \
-	notebook.png \
-	paned.png progressbar.png radiobuttons.png \
-	range_widgets.png scrolledwindow.png spinbutton.png \
-	table.png toolbar.png textview.png \
-	treeview_list.png treeview_tree.png treeview_editablecells.png treeview_combo_renderer.png \
-        treeview_draganddrop.png treeview_popup.png \
-        devcpp_project_options.png cairo_clock.png cairo_joins.png  \
-        update_ui.png      
+icons_DATA = caution.png home.png important.png next.png note.png prev.png tip.png up.png warning.png
 
-EXTRA_DIST = $(figures_DATA)
 
+EXTRA_DIST = $(icons_DATA)
