@@ -1,3 +1,9 @@
+2006-01-24  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/Makefile.am:
+	* docs/tutorial/icons/Makefile.am: Restored some files I messed up 
+	by copying stuff into the wrong place.
+
 2006-01-24  Murray Cumming <murrayc@murrayc.com>
 
 	* docs/tutorial/Makefile.am:
